# haskell-nix-extra-hackage

myapp/: myapp.cabal
mydep/: MyNamedDep.hs  mydep.cabal
