cabal-version: 3.0
name: mydep
version: 0.0.1
build-type: Simple

library
    exposed-modules:
        MyDep
    setup-depends:
        Cabal
    build-depends:
        base
        , mydepdep

library my-named-dep
    visibility: public
    exposed-modules:
        MyNamedDep
    setup-depends:
        Cabal
    build-depends:
        base
